--- a/src/app/friend-circle/friend-circle.component.css
+++ b/src/app/friend-circle/friend-circle.component.css
@@ -8,7 +8,22 @@
     margin:0px;
     padding:0px;
 }
-
+.col-12{
+    
+    min-height: 100vh;
+    width: 100vw;
+}
+.empty-list{
+    width: calc(300px + 5vw);
+    overflow: hidden;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+.empty-list img{
+    width: 100%;
+}
 .circle-container{
     width:100%;
     min-height:100vh;
