--- a/src/app/searchrooms/searchrooms.component.html
+++ b/src/app/searchrooms/searchrooms.component.html
@@ -33,30 +33,31 @@
                     
                 </div>
             </div>-->
-             <div class='table-container'>
-                <table class="table  table-striped table-dark">
+             <div class='table-container table-responsive'>
+                <table class="table table-striped table-dark">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
                     <th scope="col"></th>
                     <th scope="col">Room Name</th>
                     <th scope="col">Category</th>
-                    <th scope="col">Description</th>
+                    <th scope="col">type</th>
                     <th scope="col">createdBy</th>
+                    <th scope="col">Description</th>
                   </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let room of room_list" (click)="goToRoom(room.roomCode)">
+                 </thead>
+                 <tbody>
+                    <tr *ngFor="let room of room_list" (click)="goToRoom(room.roomCode, room.type)">
                       <th scope="row"><span class="status online"></span></th>
                       <td><img [src]="room.roomPic" style='width:30px;height:30px; border-radius: 50%;' alt=""></td>
                       <td>{{ room.roomName }}</td>
                       <td>{{ room.category }}</td>
-                      <td>{{ room.description }}</td>
+                      <td>{{ room.type }}</td>
                       <td>{{ room.createdBy }}</td>
+                      <td id='descWidth'>{{ room.description }}</td>
                     </tr>
                   </tbody>
-
-            </table>
+               </table>
              </div>
         </div>
     </div>
